# cargo-raze-alias-test

./: Cargo.toml
src/: lib.rs
